Mejora en la documentacion y estructura con nuevo end point  a la hora de remover tokens desde los servicios de google y facebook.
